--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.2.8",
     "com.unity.package-manager-ui": "1.9.11",
     "com.unity.postprocessing": "2.1.1",
     "com.unity.probuilder": "3.0.9",
